[gd_scene load_steps=7 format=4 uid="uid://b0d5k3cuk5e00"]

[ext_resource type="Script" path="res://Scripts/ForestParallaxBackground.gd" id="1_0q2rs"]
[ext_resource type="Texture2D" uid="uid://bkkrj0jkrvr4x" path="res://Assets/img/AdventurePack-Grassland-Assets.png" id="2_vigxl"]
[ext_resource type="Texture2D" uid="uid://crkoq1y2f4k8" path="res://Assets/img/AdventurePack-Grassland-Background_2.png" id="3_lim6h"]
[ext_resource type="Texture2D" uid="uid://dtnbvxwwrk28e" path="res://Assets/img/AdventurePack-Grassland-Background_1.png" id="4_vfsgh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nki0k"]
texture = ExtResource("2_vigxl")
2:15/0 = 0
2:16/0 = 0
1:16/0 = 0
1:17/0 = 0
1:18/0 = 0
2:18/0 = 0
2:19/0 = 0
3:19/0 = 0
3:18/0 = 0
4:19/0 = 0
4:18/0 = 0
5:18/0 = 0
5:17/0 = 0
4:17/0 = 0
4:16/0 = 0
5:16/0 = 0
4:15/0 = 0
3:15/0 = 0
3:16/0 = 0
3:17/0 = 0
2:17/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
7:20/0 = 0
8:20/0 = 0
8:21/0 = 0
7:21/0 = 0
7:22/0 = 0
8:22/0 = 0
7:23/0 = 0
6:23/0 = 0
5:23/0 = 0
5:22/0 = 0
4:22/0 = 0
4:21/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
6:21/0 = 0
6:22/0 = 0
5:21/0 = 0
1:1/0 = 0
1:2/0 = 0
1:3/0 = 0
2:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
4:3/0 = 0
5:3/0 = 0
5:2/0 = 0
5:1/0 = 0
4:1/0 = 0
4:0/0 = 0
3:0/0 = 0
2:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:2/0 = 0
3:2/0 = 0
2:2/0 = 0
3:3/0 = 0
6:2/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
11:2/0 = 0
12:2/0 = 0
12:1/0 = 0
11:0/0 = 0
10:0/0 = 0
9:0/0 = 0
8:0/0 = 0
7:0/0 = 0
14:0/0 = 0
15:0/0 = 0
13:2/0 = 0
13:0/0 = 0
3:5/0 = 0
2:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:5/0 = 0
4:6/0 = 0
4:7/0 = 0
3:7/0 = 0
1:6/0 = 0
1:7/0 = 0
1:8/0 = 0
2:8/0 = 0
2:7/0 = 0
3:8/0 = 0
3:9/0 = 0
4:9/0 = 0
2:9/0 = 0
4:8/0 = 0
5:8/0 = 0
5:7/0 = 0
5:6/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
5:11/0 = 0
4:11/0 = 0
3:11/0 = 0
2:11/0 = 0
1:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
4:13/0 = 0
3:13/0 = 0
2:13/0 = 0
1:13/0 = 0
5:13/0 = 0
3:14/0 = 0
2:14/0 = 0
4:14/0 = 0
11:13/0 = 0
12:13/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
14:13/0 = 0
15:13/0 = 0
15:14/0 = 0
15:15/0 = 0
14:15/0 = 0
14:16/0 = 0
13:16/0 = 0
13:15/0 = 0
12:15/0 = 0
12:16/0 = 0
11:14/0 = 0
11:15/0 = 0
12:14/0 = 0
13:13/0 = 0
13:14/0 = 0
14:14/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
20:14/0 = 0
20:15/0 = 0
19:15/0 = 0
18:15/0 = 0
17:14/0 = 0
16:14/0 = 0
18:14/0 = 0
19:14/0 = 0
17:15/0 = 0
16:15/0 = 0
18:16/0 = 0
17:16/0 = 0
19:16/0 = 0
19:12/0 = 0
18:12/0 = 0
17:12/0 = 0
13:1/size_in_atlas = Vector2i(3, 1)
13:1/0 = 0
14:2/size_in_atlas = Vector2i(2, 1)
14:2/0 = 0
16:0/size_in_atlas = Vector2i(2, 2)
16:0/0 = 0
0:3/0 = 0
0:4/0 = 0
0:5/0 = 0
9:17/0 = 0
9:18/0 = 0
10:18/0 = 0
10:17/0 = 0

[sub_resource type="TileSet" id="TileSet_63po4"]
sources/0 = SubResource("TileSetAtlasSource_nki0k")

[node name="ForestParallaxBackground" type="ParallaxBackground"]
script = ExtResource("1_0q2rs")

[node name="SkyParallax" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="AdventurePack-grassland-background2" type="Sprite2D" parent="SkyParallax"]
position = Vector2(120, 40)
scale = Vector2(0.483871, 0.5)
texture = ExtResource("3_lim6h")

[node name="CloudsParallax" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="AdventurePack-grassland-background1" type="Sprite2D" parent="CloudsParallax"]
position = Vector2(120, 40)
scale = Vector2(0.483871, 0.5)
texture = ExtResource("4_vfsgh")

[node name="DarkBush" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="dark_bushes" type="TileMapLayer" parent="DarkBush"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAUAAAAGABUAAAABAAUAAAAGABUAAAACAAUAAAAGABUAAAADAAUAAAAGABUAAAAEAAUAAAAGABUAAAAFAAUAAAAGABUAAAAGAAUAAAAGABUAAAAHAAUAAAAGABUAAAAIAAUAAAAHABQAAAAIAAQAAAAHABMAAAAHAAQAAAAHABQAAAAHAAMAAAAHABMAAAAGAAMAAAAHABQAAAAGAAIAAAAHABMAAAAFAAIAAAAGABMAAAAEAAIAAAAHABQAAAADAAEAAAAGABMAAAACAAEAAAAHABQAAAABAAAAAAAGABQAAAAAAAAAAAAGABQAAAAAAAEAAAAGABUAAAAAAAIAAAAGABUAAAAAAAMAAAAGABUAAAAAAAQAAAAGABUAAAABAAQAAAAGABUAAAABAAMAAAAGABUAAAABAAIAAAAGABUAAAABAAEAAAAGABUAAAACAAIAAAAGABUAAAACAAMAAAAGABUAAAACAAQAAAAGABUAAAADAAQAAAAGABUAAAAEAAQAAAAGABUAAAAEAAMAAAAGABUAAAAFAAQAAAAGABUAAAAFAAMAAAAGABUAAAAGAAQAAAAGABUAAAADAAIAAAAGABUAAAADAAMAAAAGABUAAAAJAAEAAAAFABYAAAAJAAIAAAAFABcAAAAKAAIAAAAFABYAAAAKAAMAAAAFABcAAAALAAQAAAAEABUAAAALAAUAAAAFABQAAAAMAAUAAAAGABUAAAANAAUAAAAGABUAAAAOAAUAAAAGABUAAAAOAAAAAAAGABQAAAANAAAAAAAGABQAAAAMAAAAAAAGABQAAAALAAAAAAAGABQAAAAKAAAAAAAGABQAAAALAAEAAAAGABUAAAALAAIAAAAGABUAAAAMAAIAAAAGABUAAAAKAAEAAAAGABUAAAALAAMAAAAFABYAAAAMAAMAAAAGABUAAAANAAMAAAAGABUAAAANAAQAAAAGABUAAAAOAAQAAAAGABUAAAAOAAMAAAAGABUAAAAMAAQAAAAGABUAAAANAAIAAAAGABUAAAAOAAIAAAAGABUAAAAOAAEAAAAGABUAAAANAAEAAAAGABUAAAAMAAEAAAAGABUAAAACAP//AAAIABQAAAABAP//AAAGABMAAAAAAP//AAAGABMAAAAJAP//AAAGABMAAAAKAP//AAAGABMAAAALAP//AAAGABMAAAAMAP//AAAGABMAAAANAP//AAAGABMAAAAOAP//AAAGABMAAAAIAP//AAAEABQAAAACAAAAAAAIABUAAAAIAAAAAAAEABUAAAAJAAAAAAAGABQAAAAIAAEAAAAEABYAAAAEAAEAAAAHABMAAAAJAAUAAAAGABMAAAAKAAUAAAAGABMAAAA=")
tile_set = SubResource("TileSet_63po4")

[node name="TreesParallax" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="trees" type="TileMapLayer" parent="TreesParallax"]
use_parent_material = true
tile_map_data = PackedByteArray("AAACAAQAAAAJABEAAAACAAUAAAAJABIAAAADAAQAAAAKABEAAAADAAUAAAAKABIAAAACAAIAAAAJABEAAAACAAMAAAAJABIAAAADAAIAAAAKABEAAAADAAMAAAAKABIAAAACAAEAAAAJABIAAAADAAEAAAAKABIAAAAGAAQAAAAJABEAAAAGAAUAAAAJABIAAAAHAAQAAAAKABEAAAAHAAUAAAAKABIAAAAGAAIAAAAJABEAAAAGAAMAAAAJABIAAAAHAAIAAAAKABEAAAAHAAMAAAAKABIAAAAGAAEAAAAJABIAAAAHAAEAAAAKABIAAAALAAQAAAAJABEAAAALAAUAAAAJABIAAAAMAAQAAAAKABEAAAAMAAUAAAAKABIAAAALAAIAAAAJABEAAAALAAMAAAAJABIAAAAMAAIAAAAKABEAAAAMAAMAAAAKABIAAAALAAEAAAAJABIAAAAMAAEAAAAKABIAAAACAP//AAAJABEAAAACAAAAAAAJABIAAAADAP//AAAKABEAAAADAAAAAAAKABIAAAAGAP//AAAJABEAAAAGAAAAAAAJABIAAAAHAP//AAAKABEAAAAHAAAAAAAKABIAAAALAP//AAAJABEAAAALAAAAAAAJABIAAAAMAP//AAAKABEAAAAMAAAAAAAKABIAAAA=")
tile_set = SubResource("TileSet_63po4")

[node name="BushParallax" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="bushes" type="TileMapLayer" parent="BushParallax"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAUAAAABABAAAAABAAUAAAACABAAAAABAAQAAAACAA8AAAACAAQAAAADAA8AAAACAAUAAAADABAAAAADAAQAAAAEAA8AAAADAAUAAAAEABAAAAAEAAUAAAAFABAAAAALAAQAAAAEABAAAAALAAUAAAADABAAAAAMAAQAAAAEAA8AAAAMAAUAAAAEABAAAAANAAUAAAAFABAAAAAHAAUAAAABABAAAAAIAAQAAAACAA8AAAAIAAUAAAACABAAAAAJAAMAAAACAA8AAAAJAAQAAAACABAAAAALAAMAAAAEAA8AAAAKAAMAAAADAA8AAAAKAAQAAAADABAAAAAKAAUAAAADABAAAAAJAAUAAAADABAAAAABAAAAAAABABIAAAAIAAAAAAAFABIAAAADAAAAAAACABIAAAAEAAAAAAADABEAAAAFAAAAAAADABEAAAAGAAAAAAADABEAAAADAAEAAAACABMAAAAEAAEAAAADABMAAAAFAAEAAAACABIAAAACAAAAAAADABMAAAAHAAAAAAAEABIAAAAGAAEAAAAEABIAAAAJAAAAAAABABIAAAAKAAAAAAACABIAAAAKAAEAAAACABMAAAALAAAAAAADABIAAAALAAEAAAADABMAAAAMAAAAAAADABAAAAANAAAAAAAEABIAAAANAAEAAAAEABMAAAAOAAAAAAAFABIAAAAMAAEAAAADABMAAAAHAAEAAAAFABIAAAAFAAIAAAACABMAAAAGAAIAAAAEABMAAAABAP//AAABABEAAAABAP7/AAABABAAAAACAP7/AAADAA8AAAADAP7/AAADAA8AAAAEAP7/AAADAA8AAAAFAP7/AAADAA8AAAAIAP//AAAFABAAAAAHAP7/AAAFABAAAAAGAP7/AAADAA8AAAAHAP//AAAEABAAAAACAP//AAADABEAAAADAP//AAADABEAAAAEAP//AAADABEAAAAFAP//AAADABEAAAAGAP//AAADABEAAAAOAP//AAAFABEAAAAJAP//AAABABAAAAAKAP7/AAABABAAAAALAP7/AAADAA8AAAAMAP7/AAADAA8AAAANAP7/AAADAA8AAAAKAP//AAACABAAAAANAP//AAADABEAAAALAP//AAADABEAAAAMAP//AAADABEAAAAOAP7/AAAEAA8AAAA=")
tile_set = SubResource("TileSet_63po4")

[node name="floor" type="TileMapLayer" parent="BushParallax"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAUAAAAOAAAAAAAGAAYAAAADAAAAAAAHAAYAAAADAAAAAAAIAAYAAAADAAAAAAAJAAYAAAAFAAoAAAALAAYAAAADAAoAAAAMAAYAAAABAAoAAAANAAYAAAADAAAAAAAOAAYAAAADAAAAAAAKAAYAAAADAAoAAAAAAAcAAAACAAIAAAABAAcAAAADAAEAAAACAAcAAAADAAEAAAADAAcAAAADAAEAAAAEAAcAAAADAAIAAAAFAAcAAAADAAIAAAAGAAcAAAADAAIAAAAHAAcAAAADAAIAAAAIAAcAAAACAAIAAAAJAAcAAAACAAIAAAAKAAcAAAACAAIAAAALAAcAAAACAAIAAAAMAAcAAAACAAIAAAANAAcAAAADAAIAAAAOAAcAAAADAAIAAAAOAAgAAAAAAAMAAAANAAgAAAAAAAMAAAAMAAgAAAAAAAMAAAALAAgAAAAAAAMAAAAKAAgAAAAAAAMAAAAJAAgAAAAAAAMAAAAIAAgAAAAAAAMAAAAHAAgAAAAAAAMAAAAGAAgAAAAAAAMAAAAFAAgAAAAAAAMAAAAEAAgAAAAAAAMAAAADAAgAAAAAAAMAAAACAAgAAAAAAAMAAAABAAgAAAAAAAMAAAAAAAgAAAAAAAMAAAAFAAYAAAADAAAAAAAEAAYAAAADAAAAAAADAAYAAAADAAAAAAACAAYAAAADAAAAAAABAAYAAAADAAAAAAAAAAYAAAADAAAAAAADAAUAAAAOAAAAAAAEAAUAAAAOAAAAAAAGAAUAAAANAAAAAAAKAAUAAAAOAAAAAAANAAUAAAAOAAAAAAAOAAUAAAANAAAAAAA=")
enabled = false
tile_set = SubResource("TileSet_63po4")

[node name="FloorParallax" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="bushes" type="TileMapLayer" parent="FloorParallax"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAUAAAABABAAAAABAAUAAAACABAAAAABAAQAAAACAA8AAAACAAQAAAADAA8AAAACAAUAAAADABAAAAADAAQAAAAEAA8AAAADAAUAAAAEABAAAAAEAAUAAAAFABAAAAALAAQAAAAEABAAAAALAAUAAAADABAAAAAMAAQAAAAEAA8AAAAMAAUAAAAEABAAAAANAAUAAAAFABAAAAAHAAUAAAABABAAAAAIAAQAAAACAA8AAAAIAAUAAAACABAAAAAJAAMAAAACAA8AAAAJAAQAAAACABAAAAALAAMAAAAEAA8AAAAKAAMAAAADAA8AAAAKAAQAAAADABAAAAAKAAUAAAADABAAAAAJAAUAAAADABAAAAABAAAAAAABABIAAAAIAAAAAAAFABIAAAADAAAAAAACABIAAAAEAAAAAAADABEAAAAFAAAAAAADABEAAAAGAAAAAAADABEAAAADAAEAAAACABMAAAAEAAEAAAADABMAAAAFAAEAAAACABIAAAACAAAAAAADABMAAAAHAAAAAAAEABIAAAAGAAEAAAAEABIAAAAJAAAAAAABABIAAAAKAAAAAAACABIAAAAKAAEAAAACABMAAAALAAAAAAADABIAAAALAAEAAAADABMAAAAMAAAAAAADABAAAAANAAAAAAAEABIAAAANAAEAAAAEABMAAAAOAAAAAAAFABIAAAAMAAEAAAADABMAAAAHAAEAAAAFABIAAAAFAAIAAAACABMAAAAGAAIAAAAEABMAAAABAP//AAABABEAAAABAP7/AAABABAAAAACAP7/AAADAA8AAAADAP7/AAADAA8AAAAEAP7/AAADAA8AAAAFAP7/AAADAA8AAAAIAP//AAAFABAAAAAHAP7/AAAFABAAAAAGAP7/AAADAA8AAAAHAP//AAAEABAAAAACAP//AAADABEAAAADAP//AAADABEAAAAEAP//AAADABEAAAAFAP//AAADABEAAAAGAP//AAADABEAAAAOAP//AAAFABEAAAAJAP//AAABABAAAAAKAP7/AAABABAAAAALAP7/AAADAA8AAAAMAP7/AAADAA8AAAANAP7/AAADAA8AAAAKAP//AAACABAAAAANAP//AAADABEAAAALAP//AAADABEAAAAMAP//AAADABEAAAAOAP7/AAAEAA8AAAA=")
enabled = false
tile_set = SubResource("TileSet_63po4")

[node name="floor" type="TileMapLayer" parent="FloorParallax"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAUAAAAOAAAAAAAGAAYAAAADAAAAAAAHAAYAAAADAAAAAAAIAAYAAAADAAAAAAAJAAYAAAAFAAoAAAALAAYAAAADAAoAAAAMAAYAAAABAAoAAAANAAYAAAADAAAAAAAOAAYAAAADAAAAAAAKAAYAAAADAAoAAAAAAAcAAAACAAIAAAABAAcAAAADAAEAAAACAAcAAAADAAEAAAADAAcAAAADAAEAAAAEAAcAAAADAAIAAAAFAAcAAAADAAIAAAAGAAcAAAADAAIAAAAHAAcAAAADAAIAAAAIAAcAAAACAAIAAAAJAAcAAAACAAIAAAAKAAcAAAACAAIAAAALAAcAAAACAAIAAAAMAAcAAAACAAIAAAANAAcAAAADAAIAAAAOAAcAAAADAAIAAAAOAAgAAAAAAAMAAAANAAgAAAAAAAMAAAAMAAgAAAAAAAMAAAALAAgAAAAAAAMAAAAKAAgAAAAAAAMAAAAJAAgAAAAAAAMAAAAIAAgAAAAAAAMAAAAHAAgAAAAAAAMAAAAGAAgAAAAAAAMAAAAFAAgAAAAAAAMAAAAEAAgAAAAAAAMAAAADAAgAAAAAAAMAAAACAAgAAAAAAAMAAAABAAgAAAAAAAMAAAAAAAgAAAAAAAMAAAAFAAYAAAADAAAAAAAEAAYAAAADAAAAAAADAAYAAAADAAAAAAACAAYAAAADAAAAAAABAAYAAAADAAAAAAAAAAYAAAADAAAAAAADAAUAAAAOAAAAAAAEAAUAAAAOAAAAAAAGAAUAAAANAAAAAAAKAAUAAAAOAAAAAAANAAUAAAAOAAAAAAAOAAUAAAANAAAAAAA=")
tile_set = SubResource("TileSet_63po4")
